# what-next-back

./: .env  .gitignore  Cargo.toml  README.md  what_next_setup.sql
migrations/2024-05-28-113757_create_oeuvres/: down.sql  up.sql
migrations/2024-05-28-141258_create_imdb_mapping/: down.sql  up.sql
migrations/2024-05-28-151153_create_tags/: down.sql  up.sql
migrations/2024-05-30-145653_create_users/: down.sql  up.sql
migrations/2024-06-01-140226_create_user_similarity/: down.sql  up.sql
src/: api_models.rs  cors.rs  jwt_auth.rs  lib.rs  main.rs  models.rs  schema.rs
src/models/: imdb.rs  isbn.rs  mal.rs  mod.rs  models.rs  oeuvres.rs  search.rs  similarity.rs  steam.rs  users.rs
