[package]
name = "what-next-back"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
anyhow = "*"
strum = "*"
strum_macros = "*"
argon2 = { version = "*", features = ["std"] }
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
csv = "*"
dotenvy = "*"
jsonwebtoken = "*"
rusqlite = { version = "*", features = ["bundled"] }
rocket = { version = "*", features = ["json", "tls"] }
reqwest = "*"
